--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "Shop project",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "msdom96",
+  "author": "Juan D",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
