--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "msdom96",
+  "author": "Juan D.",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
